2.1.0/_sources/gallery/scales/aspect_loglog.rst.txt


.. _sphx_glr_gallery_scales_aspect_loglog.py:


=============
Loglog Aspect
=============





.. image:: /gallery/scales/images/sphx_glr_aspect_loglog_001.png
    :align: center





.. code-block:: python

    import matplotlib.pyplot as plt

    fig, (ax1, ax2) = plt.subplots(1, 2)
    ax1.set_xscale("log")
    ax1.set_yscale("log")
    ax1.set_xlim(1e1, 1e3)
    ax1.set_ylim(1e2, 1e3)
    ax1.set_aspect(1)
    ax1.set_title("adjustable = box")

    ax2.set_xscale("log")
    ax2.set_yscale("log")
    ax2.set_adjustable("datalim")
    ax2.plot([1, 3, 10], [1, 9, 100], "o-")
    ax2.set_xlim(1e-1, 1e2)
    ax2.set_ylim(1e-1, 1e3)
    ax2.set_aspect(1)
    ax2.set_title("adjustable = datalim")

    plt.draw()
    plt.show()

**Total running time of the script:** ( 0 minutes  0.203 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: aspect_loglog.py <aspect_loglog.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: aspect_loglog.ipynb <aspect_loglog.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
